production/prod-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod-ingress
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: landing.devmantap.my.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: landing-page
            port:
              number: 80

  - host: pesbuk.devmantap.my.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pesbuk
            port:
              number: 80

  - host: wordpress.devmantap.my.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress
            port:
              number: 80
